--- a/daily/20260112.md
+++ b/daily/20260112.md
@@ -7,6 +7,7 @@
 * [corita kent's 10 rules](../resources/philo/corita_kent_10_rules.jpg)
 * *Syllabus on Wednesday*
 
+
 ---
 
 ### Warmup During Class: Genuary 12
@@ -32,12 +33,12 @@ Today is Monday, January 12, 2026. We are privileged to begin our semester durin
   * [Github.com](https://github.com/)
   * [Medium.com](https://medium.com/)
   * [Claude.ai](https://claude.ai/). *I regret to say you will probably need to purchase the $20/month plan.*
-2. (10 minutes) **Introduce yourself.** In the Discord channel `1-1-introduction`, please **write** a sentence or two introducing yourself, and **tell** us a little bit about why you've enrolled in this course. **Include** an image of something you've made or are tinkering with. Also, **include** an image or link to your Genuary 12 project.
-3. (10 minutes) **Share a project you admire.** In the Discord channel `1-2-project-i-admire`, please **share** a project by someone else that was made through programming or 'creative coding' (whatever that means to you). The only restriction is that the project must be the work of fewer than a ~dozen people; you must be able to **name** the person who made it (or directed its creation). In your post, **write** a sentence describing the project, and another explaining what you like about it. **Include** a link to the project and **embed** an image of the project. *Note: at some point, you may be asked to present this during class.*
-4. (10 minutes) **Share something interesting**. In the Discord channel `1-3-interesting`, please share something that has caught your attention that has nothing (or *nothing obvious*) to do with creative coding. **Write** a sentence explaining what it is, and **include** an image or link as appropriate. There are no restrictions.
-5. (30 minutes) **Read** Zach Lieberman's recent article [**10 Years of Daily Sketches**](https://zachlieberman.medium.com/i-spent-10-years-making-a-sketch-in-code-every-day-and-heres-what-i-learned-b845e811160d), and also **read** his 2015 article [**Lessons for Students**](https://medium.com/@zachlieberman/lessons-for-students-cf1acf200ee). In the Discord channel `1-4-readings`, **write** a sentence of response discussing anything that stuck with you. *(Feel free to browse his annual writeups: [2016](https://zachlieberman.medium.com/daily-sketches-2016-28586d8f008e), [2017](https://zachlieberman.medium.com/daily-sketches-in-2017-1b4234b0615d), [2018](https://zachlieberman.medium.com/daily-sketching-in-2018-f5de6d284aac), [2019](https://zachlieberman.medium.com/daily-sketching-in-2019-c1c801045577), [2020](https://zachlieberman.medium.com/daily-sketching-in-2020-c2b4a59057e5), [2021](https://zachlieberman.medium.com/daily-sketching-in-2021-fc92220aa3f4), [2022](https://zachlieberman.medium.com/daily-sketching-in-2022-4160eac26aa8), [2023](https://zachlieberman.medium.com/daily-sketching-in-2023-b4c0e31c8acb), [2024](https://zachlieberman.medium.com/daily-sketching-in-2024-77713b80f25d), [2025](https://zachlieberman.medium.com/daily-sketching-in-2025-60189ffd6b60).)*
-5. (30 minutes) **List 5 projects you want to make**. I anticipate that you have a list of ideas kicking around for specific things you would like to create. **Trawl** through your notebooks and **identify** five of your 'creative coding' ideas that you would like to make. One project should be something you feel pretty confident you could complete in an hour (or an afternoon), and one should be a project that you have no idea how to accomplish, or that you suspect could take you a year or more to develop. **Sort** your ideas in order of ambition or difficulty. **Create** a post the Discord channel `1-5-ambitions`, and briefly describe the 5 things you would like to make. This list is mostly-ish for you, so feel free to use shorthand.
-6. **Choose your presentation dates.** All presentations in this course will be less than 6 minutes long. You will be asked to present your work four times this semester, on the dates listed below. Carefully **study** your other course calendars and personal schedules, and determine the days on which you would prefer to present. In the Discord channel `1-6-dates`, list your preferred dates.
+2. (10 minutes) **Introduce yourself.** In the Discord channel `01-introduction`, please **write** a sentence or two introducing yourself, and **tell** us a little bit about why you've enrolled in this course. **Include** an image of something you've made or are tinkering with. Also, **include** an image or link to your Genuary 12 project.
+3. (10 minutes) **Share a project you admire.** In the Discord channel `02-project-i-admire`, please **share** a project by someone else that was made through programming or 'creative coding' (whatever that means to you). The only restriction is that the project must be the work of fewer than a ~dozen people; you must be able to **name** the person who made it (or directed its creation). In your post, **write** a sentence describing the project, and another explaining what you like about it. **Include** a link to the project and **embed** an image of the project. *Note: at some point, you may be asked to present this during class.*
+4. (10 minutes) **Share something interesting**. In the Discord channel `03-interesting`, please share something that has caught your attention that has nothing (or *nothing obvious*) to do with creative coding. **Write** a sentence explaining what it is, and **include** an image or link as appropriate. There are no restrictions.
+5. (30 minutes) **Read** Zach Lieberman's recent article [**10 Years of Daily Sketches**](https://zachlieberman.medium.com/i-spent-10-years-making-a-sketch-in-code-every-day-and-heres-what-i-learned-b845e811160d), and also **read** his 2015 article [**Lessons for Students**](https://medium.com/@zachlieberman/lessons-for-students-cf1acf200ee). In the Discord channel `04-readings`, **write** a sentence of response discussing anything that stuck with you. *(Feel free to browse his annual writeups: [2016](https://zachlieberman.medium.com/daily-sketches-2016-28586d8f008e), [2017](https://zachlieberman.medium.com/daily-sketches-in-2017-1b4234b0615d), [2018](https://zachlieberman.medium.com/daily-sketching-in-2018-f5de6d284aac), [2019](https://zachlieberman.medium.com/daily-sketching-in-2019-c1c801045577), [2020](https://zachlieberman.medium.com/daily-sketching-in-2020-c2b4a59057e5), [2021](https://zachlieberman.medium.com/daily-sketching-in-2021-fc92220aa3f4), [2022](https://zachlieberman.medium.com/daily-sketching-in-2022-4160eac26aa8), [2023](https://zachlieberman.medium.com/daily-sketching-in-2023-b4c0e31c8acb), [2024](https://zachlieberman.medium.com/daily-sketching-in-2024-77713b80f25d), [2025](https://zachlieberman.medium.com/daily-sketching-in-2025-60189ffd6b60).)*
+5. (30 minutes) **List 5 projects you want to make**. I anticipate that you have a list of ideas kicking around for specific things you would like to create. **Trawl** through your notebooks and **identify** five of your 'creative coding' ideas that you would like to make. One project should be something you feel pretty confident you could complete in an hour (or an afternoon), and one should be a project that you have no idea how to accomplish, or that you suspect could take you a year or more to develop. **Sort** your ideas in order of ambition or difficulty. **Create** a post the Discord channel `05-ambitions`, and briefly describe the 5 things you would like to make. This list is mostly-ish for you, so feel free to use shorthand.
+6. **Choose your presentation dates.** All presentations in this course will be less than 6 minutes long. You will be asked to present your work four times this semester, on the dates listed below. Carefully **study** your other course calendars and personal schedules, and determine the days on which you would prefer to present. In the Discord channel `06-dates`, list your preferred dates.
 	* `M Jan 26` **or** `W Jan 28`
 	* `M Feb 23` **or** `W Feb 25`
 	* `M Mar 23` **or** `W Mar 25`
