--- a/daily/20260112.md
+++ b/daily/20260112.md
@@ -33,7 +33,7 @@ Today is Monday, January 12, 2026. We are privileged to begin our semester durin
   * [Github.com](https://github.com/)
   * [Medium.com](https://medium.com/)
   * [Claude.ai](https://claude.ai/). *I regret to say you will probably need to purchase the $20/month plan.*
-2. (10 minutes) **Introduce yourself.** In the Discord channel `01-introduction`, please **write** a sentence or two introducing yourself, and **tell** us a little bit about why you've enrolled in this course. **Include** an image of something you've made or are tinkering with. Also, **include** an image or link to your Genuary 12 project.
+2. (10 minutes) **Introduce yourself.** In the Discord channel `01-introductions`, please **write** a sentence or two introducing yourself, and **tell** us a little bit about why you've enrolled in this course. **Include** an image of something you've made or are tinkering with. Also, **include** an image or link to your Genuary 12 project.
 3. (10 minutes) **Share a project you admire.** In the Discord channel `02-project-i-admire`, please **share** a project by someone else that was made through programming or 'creative coding' (whatever that means to you). The only restriction is that the project must be the work of fewer than a ~dozen people; you must be able to **name** the person who made it (or directed its creation). In your post, **write** a sentence describing the project, and another explaining what you like about it. **Include** a link to the project and **embed** an image of the project. *Note: at some point, you may be asked to present this during class.*
 4. (10 minutes) **Share something interesting**. In the Discord channel `03-interesting`, please share something that has caught your attention that has nothing (or *nothing obvious*) to do with creative coding. **Write** a sentence explaining what it is, and **include** an image or link as appropriate. There are no restrictions.
 5. (30 minutes) **Read** Zach Lieberman's recent article [**10 Years of Daily Sketches**](https://zachlieberman.medium.com/i-spent-10-years-making-a-sketch-in-code-every-day-and-heres-what-i-learned-b845e811160d), and also **read** his 2015 article [**Lessons for Students**](https://medium.com/@zachlieberman/lessons-for-students-cf1acf200ee). In the Discord channel `04-readings`, **write** a sentence of response discussing anything that stuck with you. *(Feel free to browse his annual writeups: [2016](https://zachlieberman.medium.com/daily-sketches-2016-28586d8f008e), [2017](https://zachlieberman.medium.com/daily-sketches-in-2017-1b4234b0615d), [2018](https://zachlieberman.medium.com/daily-sketching-in-2018-f5de6d284aac), [2019](https://zachlieberman.medium.com/daily-sketching-in-2019-c1c801045577), [2020](https://zachlieberman.medium.com/daily-sketching-in-2020-c2b4a59057e5), [2021](https://zachlieberman.medium.com/daily-sketching-in-2021-fc92220aa3f4), [2022](https://zachlieberman.medium.com/daily-sketching-in-2022-4160eac26aa8), [2023](https://zachlieberman.medium.com/daily-sketching-in-2023-b4c0e31c8acb), [2024](https://zachlieberman.medium.com/daily-sketching-in-2024-77713b80f25d), [2025](https://zachlieberman.medium.com/daily-sketching-in-2025-60189ffd6b60).)*
@@ -45,5 +45,6 @@ Today is Monday, January 12, 2026. We are privileged to begin our semester durin
 	* `M Apr 20` **or** `W Apr 22`
 
 ---
+
 
 
