--- a/daily/20260112.md
+++ b/daily/20260112.md
@@ -7,6 +7,14 @@
 * [corita kent's 10 rules](../resources/philo/corita_kent_10_rules.jpg)
 * *Syllabus on Wednesday*
 
+We will **not** be working on things that are: 
+
+* careerist, market-driven, instrumental, credentialist, portfolio-safe, resume-padding, vocationally pragmatic
+
+We **will** be working on things which are: 
+
+* inquiry-driven, meaning-centered, autotelic, self-directed, eccentric, market-illegible, precarious
+
 
 ---
 
