--- a/daily/20260114.md
+++ b/daily/20260114.md
@@ -13,7 +13,7 @@
 
 ### Presentation Dates
 
-*I don't know why I didn't think of this sooner.*
+*Information as of 1/13/26, 9:50pm:*
 
 * January Presentations
   * `M Jan 26` - Nestor, Suanna, Leslie, Dario, Aren
