--- a/daily/20260114.md
+++ b/daily/20260114.md
@@ -16,17 +16,17 @@
 *Information as of 1/13/26, 9:50pm:*
 
 * January Presentations
-  * `M Jan 26` - Nestor, Suanna, Leslie, Dario, Aren
+  * `M Jan 26` - Nestor, Suanna, Leslie, Dario, Aren, Lorie
   * `W Jan 28` - Merlin, Xiao, Willie, Vincent, Jeffrey, Carina
 * February Presentations
-  * `M Feb 23` - Nestor, Suanna, Xiao, Leslie, Dario, Aren
+  * `M Feb 23` - Nestor, Suanna, Xiao, Leslie, Dario, Aren, Lorie
   * `W Feb 25` - Merlin, Willie, Vincent, Jeffrey, Carina
 * March Presentations
-  * `M Mar 23` - Merlin, Suanna, Xiao, Leslie, Dario, Carina
+  * `M Mar 23` - Merlin, Suanna, Xiao, Leslie, Dario, Carina, Lorie
   * `W Mar 25` - Nestor, Aren, Willie, Vincent, Jeffrey
 * April Presentations
   * `M Apr 20` - Merlin, Suanna, Leslie, Dario, Aren
-  * `W Apr 22` - Nestor, Xiao, Willie, Vincent, Jeffrey, Carina
+  * `W Apr 22` - Nestor, Xiao, Willie, Vincent, Jeffrey, Carina, Lorie
 * *Final Show TBA (??)*
 
 ---
