--- a/daily/20260114.md
+++ b/daily/20260114.md
@@ -13,27 +13,27 @@
 
 ### Presentation Dates
 
-*Information as of 1/13/26, 9:50pm:*
+*Information as of 1/14/26, 2:50am:*
 
 * January Presentations
-  * `M Jan 26` - Nestor, Suanna, Leslie, Dario, Aren, Lorie
-  * `W Jan 28` - Merlin, Xiao, Willie, Vincent, Jeffrey, Carina
+  * `M Jan 26` - Aren, Christy, Dario, Leslie, Lorie, Nestor, Suanna
+  * `W Jan 28` - Carina, Jeffrey, Merlin, Vincent, Willie, Xiao
 * February Presentations
-  * `M Feb 23` - Nestor, Suanna, Xiao, Leslie, Dario, Aren, Lorie
-  * `W Feb 25` - Merlin, Willie, Vincent, Jeffrey, Carina
+  * `M Feb 23` - Aren, Dario, Leslie, Lorie, Nestor, Suanna, Xiao
+  * `W Feb 25` - Carina, Christy, Jeffrey, Merlin, Vincent, Willie
 * March Presentations
-  * `M Mar 23` - Merlin, Suanna, Xiao, Leslie, Dario, Carina, Lorie
-  * `W Mar 25` - Nestor, Aren, Willie, Vincent, Jeffrey
+  * `M Mar 23` - Carina, Christy, Dario, Leslie, Lorie, Merlin, Suanna, Xiao
+  * `W Mar 25` - Aren, Jeffrey, Nestor, Vincent, Willie
 * April Presentations
-  * `M Apr 20` - Merlin, Suanna, Leslie, Dario, Aren
-  * `W Apr 22` - Nestor, Xiao, Willie, Vincent, Jeffrey, Carina, Lorie
+  * `M Apr 20` - Aren, Christy, Dario, Leslie, Merlin, Suanna
+  * `W Apr 22` - Carina, Jeffrey, Lorie, Nestor, Vincent, Willie, Xiao
 * *Final Show TBA (??)*
 
 ---
 
 ### Lecture: Telematic Art
 
-Inspired by conversations from some of Monday's consultations (Merlin, Suanna), I will give a presentation about [networked and telematic art](https://github.com/golanlevin/lectures/tree/master/lecture_telematic)
+Inspired by conversations from some of Monday's consultations (Merlin, Suanna), I will give a presentation about [networked and telematic art](https://github.com/golanlevin/lectures/tree/master/lecture_telematic).
 
 ---
 
