--- a/daily/20260114.md
+++ b/daily/20260114.md
@@ -2,12 +2,41 @@
 
 ### Welcome Back!
 
+* I'll discuss Experiment One, below. 
 * Let's have an informal discussion about Zach's essays. 
 * Let's have each of you briefly present your `project-i-admire`.
-* Next up: Please create a small project for the January 26-28 presentations. 
-  * A reminder that there's no class next Monday. 
-  * Wednesday Jan 21 will be a work session (attendance is required).
-  * Should we make a music playlist or something? 
+* A reminder that there's no class next Monday (MLK)
+* Wednesday Jan 21 will be a work session (attendance is required).
+
+---
+
+### Upcoming: Experiment One
+
+This semester, you are asked to conduct and present 4 Experiments (or *Sets* of experiments — up to you). Your presentations for these Experiments will take place in the third weeks of January, February, March, and April.
+
+For each Experiment, you will be asked to **Document your work online**, either on GitHub or in a Medium post — where our standard for (*minimum viable, provisional*) documentation asks you to:
+
+1. **Title** the work in some way. (You could come up with a clever name if you wish, but even something like "LIDAR Tinkering" is fine.)
+2. **Write** a crisp sentence explaining what the project ***is***. This should be a sentence that someone else could use to describe your project well if they were talking about it in a hurry.
+3. **Write** a sentence (or so) about your motivation. *Why* did you make this? What were you curious about, or what problem did you want to address, or whom did you make it for? 
+4. **Write** a sentence (or so) about your inspiration(s) for the experiment, and **include** an image of whatever inspired you. If you were inspired by another artist, **cite** their work and **link** to it. *Someday, someone will cite yours*.
+5. **Include** one or more images (photo, screenshot, etc) of your project. 
+6. **Write** about some of the challenges you encountered, and how you approached them. **Show** some of your process in images and in writing. Please **consider** including images of "debug views", failures, etc.
+7. If applicable, **create** time-based documentation of your Experiment (in the form of an animated GIF, or unlisted YouTube/Vimeo video), which you can then **link/embed** in your post.
+8. Related to #4, be sure to **thank** anyone who helped you, and/or **acknowledge** others whose effort you built on. You may include a bibliography, if that's your style.
+9. In the appropriate Discord channel (e.g. `experiment-1-link`), **link** to your online documentation.
+
+#### NOTES: 
+
+* Optionally, you may also privately share teasers of your work in the `experiment-1-progress` Discord channel. This channel is just a private space for us to share small progress and encourage each other with emojis.
+* Later in the semester, there may also be other Discord channels for Experiments, in which I request a one-sentence preliminary proposal, or a one-sentence project update — these "check-in" waypoints are meant to keep you on track without distracting you from the real work.
+* You do not have to produce *polished, finished* online documentation in time for your presentation date, but your documentation must have all 8 of the above components in order to have minimum viability. 
+* The documentation for your Experiments should not live on my Discord! Don't trust me! Instead, it should live on a public GitHub or Medium page that you control.
+* You'll be expected to give a 5-minute presentation about your Experiment in class. Your online GitHub or Medium page will serve as the "slides" for your presentation. 
+* Whether or not you choose to share your code is up to you. If you do include your code, you'll always know where to find it in the future.
+* Some nice examples of online documentation include Zach Lieberman's [*Más Que la Cara*](https://zachlieberman.medium.com/m%C3%A1s-que-la-cara-overview-48331a0202c0) project, and Robert Hodgin's [*Meander*](https://roberthodgin.com/project/meander). 
+
+
 
 ---
 
@@ -15,16 +44,16 @@
 
 *Information as of 1/14/26, 2:50am:*
 
-* January Presentations
+* January Presentations: **Experiment One**
   * `M Jan 26` - Aren, Christy, Dario, Leslie, Lorie, Nestor, Suanna
   * `W Jan 28` - Carina, Jeffrey, Merlin, Vincent, Willie, Xiao
-* February Presentations
+* February Presentations: **Experiment Two**
   * `M Feb 23` - Aren, Dario, Leslie, Lorie, Nestor, Suanna, Xiao
   * `W Feb 25` - Carina, Christy, Jeffrey, Merlin, Vincent, Willie
-* March Presentations
+* March Presentations: **Experiment Three**
   * `M Mar 23` - Carina, Christy, Dario, Leslie, Lorie, Merlin, Suanna, Xiao
   * `W Mar 25` - Aren, Jeffrey, Nestor, Vincent, Willie
-* April Presentations
+* April Presentations: **Experiment Four**
   * `M Apr 20` - Aren, Christy, Dario, Leslie, Merlin, Suanna
   * `W Apr 22` - Carina, Jeffrey, Lorie, Nestor, Vincent, Willie, Xiao
 * *Final Show TBA (??)*
