--- a/daily/20260114.md
+++ b/daily/20260114.md
@@ -2,6 +2,7 @@
 
 ### Welcome Back!
 
+* [Syllabus!](https://github.com/golanlevin/60-412/blob/main/syllabus/readme.md)
 * I'll discuss Experiment One, below. 
 * Let's have an informal discussion about Zach's essays. 
 * Let's have each of you briefly present your `project-i-admire`.
