--- a/daily/20260114.md
+++ b/daily/20260114.md
@@ -46,20 +46,22 @@ For each Experiment, you will be asked to **Document your work online**, either 
 *Information as of 1/14/26, 2:50am:*
 
 * January Presentations: **Experiment One**
-  * `M Jan 26` - Aren, Christy, Dario, Leslie, Lorie, Nestor, Suanna
-  * `W Jan 28` - Carina, Jeffrey, Merlin, Vincent, Willie, Xiao
+  * `M Jan 26` - Aren, Christy, Dario, Leslie, Lorie, Nestor, Suanna, Alex
+  * `W Jan 28` - Carina, Claire, Jeffrey, Merlin, Vincent, Willie, Xiao
 * February Presentations: **Experiment Two**
-  * `M Feb 23` - Aren, Dario, Leslie, Lorie, Nestor, Suanna, Xiao
-  * `W Feb 25` - Carina, Christy, Jeffrey, Merlin, Vincent, Willie
+  * `M Feb 23` - Aren, Dario, Leslie, Lorie, Nestor, Suanna, Xiao, Alex
+  * `W Feb 25` - Carina, Christy, Claire, Jeffrey, Merlin, Vincent, Willie
 * March Presentations: **Experiment Three**
-  * `M Mar 23` - Carina, Christy, Dario, Leslie, Lorie, Merlin, Suanna, Xiao
+  * `M Mar 23` - Alex, Carina, Christy, Claire, Dario, Leslie, Lorie, Merlin, Suanna, Xiao
   * `W Mar 25` - Aren, Jeffrey, Nestor, Vincent, Willie
 * April Presentations: **Experiment Four**
-  * `M Apr 20` - Aren, Christy, Dario, Leslie, Merlin, Suanna
+  * `M Apr 20` - Alex, Aren, Christy, Claire, Dario, Leslie, Merlin, Suanna
   * `W Apr 22` - Carina, Jeffrey, Lorie, Nestor, Vincent, Willie, Xiao
 * *Final Show TBA (??)*
 
 ---
+
+W Jan 28, W Feb 25, M Mar 23, M Apr 20
 
 ### Lecture: Telematic Art
 
