--- a/daily/20260114.md
+++ b/daily/20260114.md
@@ -43,20 +43,18 @@ For each Experiment, you will be asked to **Document your work online**, either 
 
 ### Presentation Dates
 
-*Information as of 1/14/26, 2:50am:*
-
 * January Presentations: **Experiment One**
-  * `M Jan 26` - Aren, Christy, Dario, Leslie, Lorie, Nestor, Suanna, Alex
-  * `W Jan 28` - Carina, Claire, Jeffrey, Merlin, Vincent, Willie, Xiao
+  * `M Jan 26` - Alex, Aren, Christy, Dario, Ian, Leslie, Lorie, Nestor, Suanna
+  * `W Jan 28` - Carina, Claire, Jeffrey, Merlin, Vincent, Willie, Xiao, Zhuoyang
 * February Presentations: **Experiment Two**
-  * `M Feb 23` - Aren, Dario, Leslie, Lorie, Nestor, Suanna, Xiao, Alex
-  * `W Feb 25` - Carina, Christy, Claire, Jeffrey, Merlin, Vincent, Willie
+  * `M Feb 23` - Alex, Aren, Dario, Ian, Leslie, Lorie, Nestor, Suanna, Xiao
+  * `W Feb 25` - Carina, Christy, Claire, Jeffrey, Merlin, Vincent, Willie, Zhuoyang
 * March Presentations: **Experiment Three**
   * `M Mar 23` - Alex, Carina, Christy, Claire, Dario, Leslie, Lorie, Merlin, Suanna, Xiao
-  * `W Mar 25` - Aren, Jeffrey, Nestor, Vincent, Willie
+  * `W Mar 25` - Aren, Ian, Jeffrey, Nestor, Vincent, Willie, Zhuoyang
 * April Presentations: **Experiment Four**
-  * `M Apr 20` - Alex, Aren, Christy, Claire, Dario, Leslie, Merlin, Suanna
-  * `W Apr 22` - Carina, Jeffrey, Lorie, Nestor, Vincent, Willie, Xiao
+  * `M Apr 20` - Alex, Aren, Christy, Claire, Dario, Ian, Leslie, Merlin, Suanna
+  * `W Apr 22` - Carina, Jeffrey, Lorie, Nestor, Vincent, Willie, Xiao, Zhuoyang
 * *Final Show TBA (??)*
 
 ---
