--- a/daily/20260114.md
+++ b/daily/20260114.md
@@ -50,8 +50,8 @@ For each Experiment, you will be asked to **Document your work online**, either 
   * `M Feb 23` - Alex, Aren, Dario, Ian, Leslie, Lorie, Nestor, Suanna, Xiao
   * `W Feb 25` - Carina, Christy, Claire, Jeffrey, Merlin, Vincent, Willie, Zhuoyang
 * March Presentations: **Experiment Three**
-  * `M Mar 23` - Alex, Carina, Christy, Claire, Dario, Leslie, Lorie, Merlin, Suanna, Xiao
-  * `W Mar 25` - Aren, Ian, Jeffrey, Nestor, Vincent, Willie, Zhuoyang
+  * `M Mar 23` - Alex, Carina, Christy, Claire, Dario, Lorie, Merlin, Suanna, Xiao
+  * `W Mar 25` - Aren, Ian, Jeffrey, Leslie, Nestor, Vincent, Willie, Zhuoyang
 * April Presentations: **Experiment Four**
   * `M Apr 20` - Alex, Aren, Christy, Claire, Dario, Ian, Leslie, Merlin, Suanna
   * `W Apr 22` - Carina, Jeffrey, Lorie, Nestor, Vincent, Willie, Xiao, Zhuoyang
