--- a/daily/20260121.md
+++ b/daily/20260121.md
@@ -7,3 +7,4 @@
   * [three.js](https://threejs.org/) (Zhuoyang, Willie)
   * [GLSL](https://www.shadertoy.com/) (Suanna, Alex)
   * [d3.js](https://d3js.org/) (Carina)
+  * [SparkJS](https://github.com/sparkjsdev/spark) (Lorie)
