--- a/daily/20260114.md
+++ b/daily/20260114.md
@@ -44,8 +44,8 @@ For each Experiment, you will be asked to **Document your work online**, either 
 ### Presentation Dates
 
 * January Presentations: **Experiment One**
-  * `M Jan 26` - Alex, Aren, Christy, Dario, Ian, Leslie, Lorie, Nestor, Suanna
-  * `W Jan 28` - Carina, Claire, Jeffrey, Merlin, Vincent, Willie, Xiao, Zhuoyang
+  * `M Jan 26` - Alex, Aren, Dario, Ian, Leslie, Lorie, Nestor, Suanna
+  * `W Jan 28` - Carina, Christy, Claire, Jeffrey, Merlin, Vincent, Willie, Xiao, Zhuoyang
 * February Presentations: **Experiment Two**
   * `M Feb 23` - Alex, Aren, Dario, Ian, Leslie, Lorie, Nestor, Suanna, Xiao
   * `W Feb 25` - Carina, Christy, Claire, Jeffrey, Merlin, Vincent, Willie, Zhuoyang
@@ -73,6 +73,7 @@ Golan will resume 1:1 consultations — beginning with Leslie, Jeffrey, and Nes
 
 ---
 *EOF*
+
 
 
 
