--- a/daily/20260202.md
+++ b/daily/20260202.md
@@ -1,6 +1,6 @@
 # Wednesday January 28, 2026
 
-* Presentations by Bosi, Aren, Xiao.
+* Presentations by Bosi, Aren, Vincent, Xiao.
 
 ### Discussion Pods 1
 
